# interprocess

./: .clang-format  .travis.yml  LICENSE  README.md  interprocess.cabal  stack.yaml
.github/workflows/: build.yml  tests.yml
app/: Main.hs  concurrent-malloc.hs  wait-qsem.hs
bench/: concurrent-malloc.hs  time-mvar.hs  wait-qsem.hs
cbits/: SharedObjectName.c  SharedObjectNamePosix.c  SharedObjectNameWin32.c  common.c
cpp/: .clang-format  .clang-tidy  CMakeLists.txt
cpp/include/interprocess/: array.hpp  blob.hpp  common.hpp  growing_blob.hpp  map.hpp  map.hpp.noleafs  resource.hpp  shared_blob.hpp  shared_object_name.hpp
cpp/scratch/: CMakeLists.txt  scratch.cpp
cpp/src/interprocess/: shared_object_name.cpp
cpp/src/interprocess/posix/: blob.cpp  growing_blob.cpp  memory_map.cpp  memory_map.hpp  shared_blob.cpp  storage_descriptor.cpp  storage_descriptor.hpp
cpp/test/: CMakeLists.txt  resource.cpp  test.cpp
examples/: concurrent-malloc.hs  wait-mvar-vanilla.hs  wait-mvar.hs  wait-qsem.hs
include/: SharedObjectName.h  SharedPtr.h  common.h
src/: StoredMVar.c  wait-mvar-simpler.hs  wait-mvar.hs
src/Control/Concurrent/Process/: QSem.c  QSem.hs  StoredMVar.c  StoredMVar.hs  StoredMVarOld.c  StoredMVarPosix.c  StoredMVarPrim.cmm  StoredMVarWin32.c
src/Foreign/: SharedObjectName.hs  SharedPtr.c  SharedPtr.h  SharedPtr.hs  SharedPtrPosix.c  SharedPtrPosix.h  SharedPtrWin32.c  SharedPtrWin32.h
src/Foreign/SharedObjectName/: Internal.hs
src/Foreign/SharedPtr/: C.hs
test/: AsyncProblem.hs  StoredMVar.hs  test-mvar.hs
test-src/Tools/: Handle.hs  Runner.hs  TestResult.hs
test/Tools/: Handle.hs  Runner.hs  TestResult.hs
