name:                interprocess
version:             0.1.0.0
author:              Artem Chirkin
maintainer:          chirkin@arch.ethz.ch
copyright:           (c) 2018 Artem Chirkin
category:            system
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
    src/StoredMVar.c

executable wait-mvar
    hs-source-dirs:      src
    main-is:             wait-mvar.hs
    default-language:    Haskell2010
    build-depends:       base
                       , typed-process >= 0.2
    ghc-options:         -threaded -Wall -debug -O0
    extra-libraries:     pthread
    cc-options:          -pthread -g -DNDEBUG
    cpp-options:         -DNDEBUG
    c-sources:           src/StoredMVar.c
