name:                interprocess
version:             0.1.0.0
author:              Artem Chirkin
description:
  the following locks one of the running processes sooner or later (usually, after 1-5 iterations)
  > while true; do reset && clear && rm -rf /dev/shm/HsIPC.* && stack build && stack exec wait-mvar; done
  process-taker usually deadlocks on something like this:
  [i] mvar_take 1010 entering, errno 0
  [i] mvar_take 1010 locked, isFull: 0, errno 0
  [i] mvar_take 1010 will wait 50, isFull 0, errno 0

maintainer:          chirkin@arch.ethz.ch
copyright:           (c) 2018 Artem Chirkin
category:            system
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
    src/StoredMVar.c

executable wait-mvar
    hs-source-dirs:      src
    main-is:             wait-mvar.hs
    default-language:    Haskell2010
    build-depends:       base
                       , typed-process >= 0.2
    ghc-options:         -threaded -Wall -debug -O0
    extra-libraries:     pthread
    cc-options:          -pthread -g -DNDEBUG
    cpp-options:         -DNDEBUG
    c-sources:           src/StoredMVar.c

executable wait-mvar-simpler
    hs-source-dirs:      src
    main-is:             wait-mvar-simpler.hs
    default-language:    Haskell2010
    build-depends:       base
                       , typed-process >= 0.2
    ghc-options:         -threaded -Wall -debug -O0
    extra-libraries:     pthread
    cc-options:          -pthread -g -DNDEBUG
    cpp-options:         -DNDEBUG
    c-sources:           src/StoredMVar.c
